--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "inquirer": "^8.2.0",
